Move swapping of dice to CSS to prevent flickering
Going frame-by-frame during a swap shows that there's a brief moment where the first die element is gone, leaving the second element, which causes a layout shift. Doing it via CSS does the swap at the same time, and also renders about 200% faster (12ms compared to 32ms).

--- a/dice-roll.css
+++ b/dice-roll.css
@@ -23,6 +23,10 @@
 
 		list-style-type: none;
 
+		&.swapped > veyndan-die:first-child {
+			order: 1;
+		}
+
 		& > veyndan-die {
 			overflow: hidden;
 			flex: 0 1 calc(var(--die-side-length-unitless) * .21875cqmin + 3.0625cqmin);
